fix: fix long words overflowing in PostPreview and Post

--- a/src/components/Post/style.module.css
+++ b/src/components/Post/style.module.css
@@ -1,3 +1,6 @@
+.post {
+  word-break: break-word;
+}
 .post > header {
   margin-block-end: var(--size-2);
 }
